--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
       - assets/img/people.jpg
+      - assets/img/ann.jpg
+      - assets/img/girl.jpg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
