--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,12 @@ flutter:
       - assets/img/people.jpg
       - assets/img/ann.jpg
       - assets/img/girl.jpg
+      - assets/img/mountain.jpeg
+      - assets/img/beach.jpeg
+      - assets/img/beach_palm.jpeg
+      - assets/img/mountain_stars.jpeg
+      - assets/img/sunset.jpeg
+      - assets/img/river.jpeg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
