--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   firebase_storage: ^2.1.0
   cloud_firestore: ^0.9.13
   image_picker: ^0.6.7+12
+  cached_network_image: 2.3.3
 
 dev_dependencies:
   flutter_test:
